# mcp-canary

./: .gitignore  02-mcp-canary.md  LICENSE  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: publish.yml  test.yml
docs/: blog-building-mcp-canary.md  deployment.md  threat-model.md  why-mcp-canary.md
examples/: README.md  basic_server.py  simulate_attack.py
mcp_canary/: __init__.py  alerter.py  bait_strings.py  canary.py  decorators.py  descriptions.py  detection.py
tests/: conftest.py  test_alerter.py  test_bait_strings.py  test_decorators.py  test_descriptions.py  test_detection.py
