[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-canary"
version = "0.1.0"
description = "Canary tokens for the agent era — drop-in honeytokens for FastMCP servers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Amin Raji", email = "amin@aminrj.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "fastmcp",
    "security",
    "honeytoken",
    "canary",
    "ai-security",
    "llm-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mcp>=1.2",
]

[project.urls]
Homepage = "https://github.com/aminrj/mcp-canary"
Documentation = "https://github.com/aminrj/mcp-canary#readme"
Issues = "https://github.com/aminrj/mcp-canary/issues"
Source = "https://github.com/aminrj/mcp-canary"

[tool.hatch.build.targets.wheel]
packages = ["mcp_canary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
